<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tritech_micron</name>
  <version>1.0.0</version>
  <description>
    Controls and communicates with the Tritech Micron sonar.
  </description>

  <maintainer email="dev@anassinator.com">Anass Al</maintainer>
  <license>GPLv2</license>

  <exec_depend>rclpy</exec_depend>

  <!-- <depend>rclpy</depend> -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <!-- <exec_depend>python-bitstring-pip</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
